@@ -1,7 +1,7 @@
 Package: vegtable
 Version: 0.1.1
 Encoding: UTF-8
-Date: 2017-08-07
+Date: 2018-01-01
 Title: Handling Vegetation Data Sets
 Author: Miguel Alvarez <kamapu78@gmail.com>
 Maintainer: Miguel Alvarez <kamapu78@gmail.com>
